--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -15,19 +15,20 @@
         android:layout_height="0dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_weight="3"
         android:id="@+id/phone_auth_fields"
+        android:layout_weight="3"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:weightSum="1">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="319dp"
+            android:layout_height="250dp"
             android:weightSum="2.0"
 
             app:srcCompat="@drawable/logo_solo" />
+
         <TextView
             android:id="@+id/status"
             style="@style/ThemeOverlay.MyTextDetail"
