--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -8,12 +8,11 @@
     android:background="@color/bg_screen1">
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="@dimen/img_width_height"
-        android:layout_height="@dimen/img_width_height"
-        app:srcCompat="@drawable/logopng"
-        android:layout_marginTop="27dp"
+        android:layout_width="1000dp"
+        android:layout_height="900dp"
+        app:srcCompat="@drawable/Welcome1"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,20 +22,34 @@
         android:layout_below="@+id/imageView3"
         android:layout_alignParentStart="true"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="12dp"
+        android:id="@+id/linearLayout2">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="@dimen/desc_padding"
-            android:paddingRight="@dimen/desc_padding"
-            android:text="@string/slide_1_desc"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_desc" />
 
     </LinearLayout>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/textView_title"
+      android:text="Welcome to Undivided"
+      android:textColor="@android:color/white"
+      android:layout_alignBottom="@+id/textView"
+      android:layout_centerHorizontal="true"
+      android:layout_marginBottom="59dp"
+      android:textSize="23dp"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/desc_padding"
+        android:paddingRight="@dimen/desc_padding"
+        android:text="@string/slide_1_desc"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/slide_desc"
+        android:layout_marginBottom="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
