--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/bg_screen2">
     <ImageView
-        android:layout_width="@dimen/img_width_height"
-        android:layout_height="@dimen/img_width_height"
-        app:srcCompat="@drawable/girl"
-        android:layout_above="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/imageView5" />
+        android:layout_width="900dp"
+        android:layout_height="900dp"
+        app:srcCompat="@drawable/Welcome2"
+        android:id="@+id/imageView5"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignParentStart="true" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,47 +20,35 @@
         android:id="@+id/linearLayout"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="161dp">
+        android:layout_marginBottom="162dp">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/slide_2_title"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_title"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="@dimen/desc_padding"
-            android:paddingRight="@dimen/desc_padding"
-            android:text="@string/slide_2_desc"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_desc" />
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="@dimen/img_width_height"
-        android:layout_height="@dimen/img_width_height"
-        app:srcCompat="@drawable/man"
-        android:layout_marginBottom="50dp"
-        android:layout_marginStart="62dp"
-        android:layout_above="@+id/linearLayout"
-        android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/slide_2_title"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/slide_title"
+        android:textStyle="bold"
+        android:layout_alignTop="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="@dimen/img_width_height"
-        android:layout_height="@dimen/img_width_height"
-        app:srcCompat="@drawable/boy"
-        android:layout_alignTop="@+id/imageView6"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="57dp" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/desc_padding"
+        android:paddingRight="@dimen/desc_padding"
+        android:text="@string/slide_2_desc"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/slide_desc"
+        android:layout_below="@+id/imageView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="12dp" />
 
 </RelativeLayout>
