--- a/app/src/main/res/layout/welcome_slide4.xml
+++ b/app/src/main/res/layout/welcome_slide4.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_screen4">
     <LinearLayout
@@ -8,12 +10,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <ImageView
-            android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-           />
+            app:srcCompat="@drawable/welcome4"
+            android:layout_width="445dp"
+            android:layout_height="445dp"
+            android:layout_weight="8.05" />
 
         <TextView
             android:layout_width="wrap_content"
