--- a/app/src/main/res/layout/card_groups.xml
+++ b/app/src/main/res/layout/card_groups.xml
@@ -26,7 +26,8 @@
                 android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name" />
+                android:text="Name"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/tvDesc"
