--- a/app/src/main/res/layout/activity_call_log.xml
+++ b/app/src/main/res/layout/activity_call_log.xml
@@ -8,12 +8,14 @@
 
     <TextView
         android:id="@+id/tvCallLog"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:scrollbars="vertical"
         android:text=""
-        android:scrollbars = "vertical"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
