--- a/app/src/main/res/layout/activity_functions.xml
+++ b/app/src/main/res/layout/activity_functions.xml
@@ -65,4 +65,12 @@
         android:text="Call Log"
         app:layout_constraintStart_toEndOf="@+id/btnDisableAppSwitch"
         app:layout_constraintTop_toBottomOf="@+id/btnSTT" />
+
+    <Button
+        android:id="@+id/btnCreateGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SEND SMS"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="137dp" />
 </android.support.constraint.ConstraintLayout>
