--- a/app/src/main/res/layout/card_groups.xml
+++ b/app/src/main/res/layout/card_groups.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cvGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,55 +27,107 @@
                 android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="Name"
-                android:textSize="25sp" />
+                android:textSize="25sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Description" />
+                android:layout_marginStart="8dp"
+                android:text="Description"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
             <TextView
                 android:id="@+id/tvGroupMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="GroupMessage" />
+                android:layout_marginStart="8dp"
+                android:text="GroupMessage"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvDesc" />
 
-            <TextView
-                android:id="@+id/tvRule1"
+            <CheckBox
+                android:id="@+id/cbRule1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Rule 1"
+                android:clickable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGroupMessage" />
 
-            <TextView
-                android:id="@+id/tvRule2"
+            <CheckBox
+                android:id="@+id/cbRule2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Rule 2"
+                android:clickable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGroupMessage" />
 
-            <TextView
-                android:id="@+id/tvRule3"
+            <CheckBox
+                android:id="@+id/cbRule3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Rule 3"
+                android:clickable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGroupMessage" />
 
-            <TextView
-                android:id="@+id/tvRule4"
+            <CheckBox
+                android:id="@+id/cbRule4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Rule 4"
+                android:clickable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGroupMessage" />
 
-            <TextView
-                android:id="@+id/tvRule5"
+            <CheckBox
+                android:id="@+id/cbRule5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Rule 5"
+                android:clickable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGroupMessage" />
 
-            <TextView
-                android:id="@+id/tvRule6"
+            <CheckBox
+                android:id="@+id/cbRule6"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Rule 6"
+                android:clickable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGroupMessage" />
 
-            <TextView
-                android:id="@+id/tvRule7"
+            <CheckBox
+                android:id="@+id/cbRule7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Rule 7"
+                android:clickable="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGroupMessage" />
 
         </LinearLayout>
 
